feat: some small db schema edits
