# internal/api/controller/controller.go
@@ -4,12 +4,12 @@ import (
 	"errors"
 	"net/http"
 
-	"github.com/cyclimse/fediverse-blahaj/internal/api/v1"
+	"log/slog"
+
+	v1 "github.com/cyclimse/fediverse-blahaj/internal/api/v1"
 	"github.com/cyclimse/fediverse-blahaj/internal/business"
-	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
 	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
-	"golang.org/x/exp/slog"
 )
 
 func NewAPIController(business *business.Business) v1.ServerInterface {
@@ -22,11 +22,11 @@ type APIController struct {
 	Business *business.Business
 }
 
-// GetServerById implements v1.ServerInterface
-func (c *APIController) GetServerByID(ctx echo.Context, id uuid.UUID) error {
-	s, err := c.Business.GetServerByID(ctx.Request().Context(), id)
+// GetInstanceById implements v1.InstanceInterface
+func (c *APIController) GetInstanceByID(ctx echo.Context, id uuid.UUID) error {
+	instance, err := c.Business.GetInstanceByID(ctx.Request().Context(), id)
 	if err != nil {
-		if errors.Is(err, business.ErrServerNotFound) {
+		if errors.Is(err, business.ErrInstanceNotFound) {
 			e := v1.Error{
 				Code:    http.StatusNotFound,
 				Message: err.Error(),
@@ -34,49 +34,53 @@ func (c *APIController) GetServerByID(ctx echo.Context, id uuid.UUID) error {
 			return ctx.JSON(http.StatusNotFound, e)
 		}
 	}
-	return ctx.JSON(http.StatusOK, s)
+	return ctx.JSON(http.StatusOK, instanceFromModel(instance))
 }
 
-// ListServers implements v1.ServerInterface
-func (c *APIController) ListServers(ctx echo.Context, params v1.ListServersParams) error {
+// ListInstances implements v1.InstanceInterface
+func (c *APIController) ListInstances(ctx echo.Context, params v1.ListInstancesParams) error {
 	page, pageSize := validatePage(params.Page), validatePageSize(params.PerPage)
 
-	servers, total, err := c.Business.ListServers(ctx.Request().Context(), page, pageSize)
+	instances, total, err := c.Business.ListInstances(ctx.Request().Context(), page, pageSize)
 	if err != nil {
-		slog.ErrorCtx(ctx.Request().Context(), "failed to list servers", "error", err)
+		slog.ErrorContext(ctx.Request().Context(), "failed to list instances", "error", err)
 		return err
 	}
 
-	var resp = v1.ListServers200JSONResponse{
-		Results: make([]v1.Server, len(servers)),
+	var resp = v1.ListInstances200JSONResponse{
+		Results: make([]v1.Instance, len(instances)),
 		Page:    page,
 		PerPage: pageSize,
 		Total:   total,
 	}
 
-	for i, s := range servers {
-		resp.Results[i] = v1.Server{
-			Id:     openapi_types.UUID(s.ID),
-			Domain: s.Domain,
-
-			Description: nil,
-			Software:    nil,
-
-			NumberOfPeers: s.NumberOfPeers,
-
-			OpenRegistrations:   s.OpenRegistrations,
-			TotalUsers:          s.TotalUsers,
-			ActiveUsersHalfYear: s.ActiveHalfyear,
-			ActiveUsersMonth:    s.ActiveMonth,
-			LocalPosts:          s.LocalPosts,
-			LocalComments:       s.LocalComments,
-		}
+	for i, s := range instances {
+		resp.Results[i] = instanceFromModel(s)
 	}
 
 	return ctx.JSON(http.StatusOK, resp)
 }
 
-// ListCrawlsForServer implements v1.ServerInterface
-func (*APIController) ListCrawlsForServer(ctx echo.Context, id uuid.UUID, params v1.ListCrawlsForServerParams) error {
-	panic("unimplemented")
+// ListCrawlsForInstance implements v1.InstanceInterface
+func (c *APIController) ListCrawlsForInstance(ctx echo.Context, id uuid.UUID, params v1.ListCrawlsForInstanceParams) error {
+	page, pageSize := validatePage(params.Page), validatePageSize(params.PerPage)
+
+	crawls, total, err := c.Business.ListCrawlsForInstance(ctx.Request().Context(), id, page, pageSize)
+	if err != nil {
+		slog.ErrorContext(ctx.Request().Context(), "failed to list crawls", "error", err, "instance_id", id)
+		return err
+	}
+
+	var resp = v1.ListCrawlsForInstance200JSONResponse{
+		Results: make([]v1.Crawl, len(crawls)),
+		Page:    page,
+		PerPage: pageSize,
+		Total:   total,
+	}
+
+	for i, c := range crawls {
+		resp.Results[i] = crawlFromModel(c)
+	}
+
+	return ctx.JSON(http.StatusOK, resp)
 }
